--- a/dictionary-frontend/Dockerfile
+++ b/dictionary-frontend/Dockerfile
@@ -16,7 +16,7 @@ RUN npm run build
 # Use an official Nginx image to serve the application
 FROM nginx:alpine
 # Copy the built application from the previous stage to the Nginx HTML directory
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /app/build /usr/share/nginx/html
 # Expose port 80
 EXPOSE 80
 # Start Nginx server
