--- a/dictionary-frontend/Dockerfile
+++ b/dictionary-frontend/Dockerfile
@@ -17,6 +17,8 @@ RUN npm run build
 FROM nginx:alpine
 # Copy the built application from the previous stage to the Nginx HTML directory
 COPY --from=build /app/build /usr/share/nginx/html
+# Copy the Nginx configuration file
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 # Expose port 80
 EXPOSE 80
 # Start Nginx server
