minor layout changes

--- a/dictionary-frontend/nginx.conf
+++ b/dictionary-frontend/nginx.conf
@@ -5,8 +5,10 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Allow access to the sutiau-mp3 directory
-    location /sutiau-mp3/ {
+    # Allow access to the sutiau-mp3 directory and its subfolders
+    location /sutiau-mp3 {
+        # TODO: check if this is needed / works
+        alias /usr/share/nginx/html/sutiau-mp3;
         autoindex on; # Optional: Enable directory listing
     }
 
